--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "w/Aeo8WZ1qLAeINKuHlejxcTsQjF2/VHwUgIPUBJrwo=",
+    "Issuer": "https://localhost:7274",
+    "Audience": "postman",
+    "exp": "60"
+  }
 }
