--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "w/Aeo8WZ1qLAeINKuHlejxcTsQjF2/VHwUgIPUBJrwo=",
-    "Issuer": "https://localhost:7274",
+    "Issuer": "https://localhost:7163",
     "Audience": "postman",
     "exp": "60"
   }
