--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,18 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True",
+    "KhoiConnection": "Server=localhost,1433;Database=UniTic;User Id=sa;Password=8/zC-0E1@jA;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "w/Aeo8WZ1qLAeINKuHlejxcTsQjF2/VHwUgIPUBJrwo=",
     "Issuer": "https://localhost:7163",
     "Audience": "postman",
     "exp": "60"
+  },
+  "Google": {
+    "ClientId": "1005325771961-49ql12vna03rgrtkk76hgmke1neovr6l.apps.googleusercontent.com",
+    "ClientSecret": "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",
+    "ProjectId": "unitic-462711"
   }
 }
