Add Login Google

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True",
-    "KhoiConnection": "Server=localhost,1433;Database=UniTic;User Id=sa;Password=8/zC-0E1@jA;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True",
+    "DefaultConnection": "Server=localhost,1433;Database=UniTic;User Id=sa;Password=8/zC-0E1@jA;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "w/Aeo8WZ1qLAeINKuHlejxcTsQjF2/VHwUgIPUBJrwo=",
