--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True"
   },
-  "Jwt": {
-    "Key": "w/Aeo8WZ1qLAeINKuHlejxcTsQjF2/VHwUgIPUBJrwo=",
+  "JwtOptions": {
+    "Secret": "mySuper$ecretKey123!@#ForJwtTokenGeneration",
     "Issuer": "https://localhost:7163",
     "Audience": "postman",
-    "exp": "60"
+    "ExpirationTimeInMinutes": 15
   }
 }
