--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,10 @@
     "Issuer": "https://localhost:7163",
     "Audience": "postman",
     "ExpirationTimeInMinutes": 15
+  },
+  "Google": {
+    "ClientId": "1005325771961-49ql12vna03rgrtkk76hgmke1neovr6l.apps.googleusercontent.com",
+    "ClientSecret": "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",
+    "ProjectId": "unitic-462711"
   }
 }
