thêm hàm trim all string, add lại validate hoàn chỉnh, thêm CRUD của university

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Guesswhoisit04@;TrustServerCertificate=True"
   },
   "JwtOptions": {
     "Secret": "mySuper$ecretKey123!@#ForJwtTokenGeneration",
