Update: forgot and reset password

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,5 +19,11 @@
     "ClientId": "1005325771961-49ql12vna03rgrtkk76hgmke1neovr6l.apps.googleusercontent.com",
     "ClientSecret": "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",
     "ProjectId": "unitic-462711"
+  },
+  "GmailOptions": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "vuminhdat98@gmail.com",
+    "Password": "fxhaemglldmwrzqc"
   }
 }
