--- a/appsettings.json
+++ b/appsettings.json
@@ -26,5 +26,18 @@
     "Port": 587,
     "Email": "vuminhdat98@gmail.com",
     "Password": "fxhaemglldmwrzqc"
-  }
+  },
+  "Vnpay": {
+    "Version": "2.1.0",
+    "Command": "pay",
+    "TmnCode": "KZPIO2F1",
+    "HashSecret": "OE8JANEML5MPXVCSJWRBBIGD9GKHESGX",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "PaymentBackUrl": "https://localhost:7163/Unitic/Payment/vnpay-response",
+    "PaymentCancelUrl": "https://localhost:7163/Unitic/Payment/vnpay-cancel",
+    "CurrCode": "VND",
+    "Locale": "vn"
+  },
+  "TimeZoneId": "SE Asia Standard Time"
+
 }
