--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True",
-    "QuartzConnection": "Server=localhost,1431;Database=Unitic_Job;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
+    "DefaultConnection": "Server=host.docker.internal,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True",
+    "QuartzConnection": "Server=host.docker.internal,1431;Database=Unitic_Job;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
   },
   "JwtOptions": {
     "Secret": "mySuper$ecretKey123!@#ForJwtTokenGeneration",
