--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   },
   "JwtOptions": {
     "Secret": "mySuper$ecretKey123!@#ForJwtTokenGeneration",
-    "Issuer": "https://localhost:7163",
+    "Issuer": "Unitic",
     "Audience": "postman",
     "ExpirationTimeInMinutes": 15
   },
@@ -33,8 +33,8 @@
     "TmnCode": "KZPIO2F1",
     "HashSecret": "OE8JANEML5MPXVCSJWRBBIGD9GKHESGX",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "PaymentBackUrl": "https://localhost:7163/Unitic/Payment/vnpay-response",
-    "PaymentCancelUrl": "https://localhost:7163/Unitic/Payment/vnpay-cancel",
+    "PaymentBackUrl": "https://localhost:8081/Unitic/Payment/vnpay-response",
+    "PaymentCancelUrl": "https://localhost:8081/Unitic/Payment/vnpay-cancel",
     "CurrCode": "VND",
     "Locale": "vn"
   },
