--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True",
-    "QuartzConnection": "Server=host.docker.internal,1431;Database=Unitic_Job;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1431;Database=Unitic;uid=sa;Password=Xoai_051207;TrustServerCertificate=True",
+    "QuartzConnection": "Server=localhost,1431;Database=Unitic_Job;uid=sa;Password=Xoai_051207;TrustServerCertificate=True"
   },
   "JwtOptions": {
     "Secret": "mySuper$ecretKey123!@#ForJwtTokenGeneration",
@@ -33,8 +33,8 @@
     "TmnCode": "KZPIO2F1",
     "HashSecret": "OE8JANEML5MPXVCSJWRBBIGD9GKHESGX",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "PaymentBackUrl": "https://localhost:8081/Unitic/Payment/vnpay-response",
-    "PaymentCancelUrl": "https://localhost:8081/Unitic/Payment/vnpay-cancel",
+    "PaymentBackUrl": "https://localhost:7163/Unitic/Payment/vnpay-response",
+    "PaymentCancelUrl": "https://localhost:7163/Unitic/Payment/vnpay-cancel",
     "CurrCode": "VND",
     "Locale": "vn"
   },
